[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/minigame/ArcadeMinigame.gd" id="1"]

[node name="ArcadeMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.15, 1)

[node name="GameArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Catcher" type="ColorRect" parent="GameArea"]
layout_mode = 1
offset_left = 236.0
offset_top = 200.0
offset_right = 276.0
offset_bottom = 216.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
text = "Score: 0"

[node name="TimeLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 28.0
text = "Time: 30.0"
horizontal_alignment = 2

[node name="StartPrompt" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 16.0
text = "Press INTERACT to Start!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 28.0
text = "Game Over!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 36.0
offset_right = 192.0
offset_bottom = 56.0
text = "Final Score: 0"
horizontal_alignment = 1

[node name="ExitPrompt" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 68.0
offset_right = 192.0
offset_bottom = 88.0
text = "Press INTERACT to exit"
horizontal_alignment = 1
